--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-playlist",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jefriR.github.io/reactjs-my-playlist/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -9,6 +10,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.4.0",
@@ -19,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
